@@ -1,21 +1,28 @@
 <!DOCTYPE html>
+
 <html>
 <head>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
+    svg {
+        border: 1px solid black;
     }
   </style>
 </head>
+
 <body>
-  <p>You should see no red boxes below</p>
-  <svg width="600" height="300" viewBox="0 0 600 300">
-    <rect width="120" height="60" fill="green" />
-    <rect x="150" y="0" width="120" height="60" fill="green" />
-    <rect x="300" y="0" width="120" height="60" fill="green" />
-    <rect y="90" width="120" height="60" fill="green" />
-    <rect x="150" y="90" width="120" height="60" fill="green" />
-  </svg>
+
+    <div class="container">
+        <p>You should see no red boxes below</p>
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 600 400" style=" width: 600px; height: 400px;">
+            <!-- transform-box: view-box -->
+            <rect x="20" y="10" width="100" height="50" fill="green" />
+            <rect x="480" y="40" width="50" height="50" fill="green" />
+            <rect x="120" y="120" width="50" height="50" fill="green" />
+            <rect x="20" y="200" width="100" height="50" fill="green" />
+            <rect x="480" y="260" width="50" height="50" fill="green" />
+            <rect x="120" y="320" width="50" height="50" fill="green" />
+        </svg>
+    </div>
+
 </body>
 </html>
