@@ -1,41 +1,42 @@
 <!DOCTYPE html>
+
 <html>
 <head>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
+    svg {
+        border: 1px solid black;
     }
   </style>
 </head>
+
 <body>
-  <p>You should see no red boxes below</p>
-  <svg width="600" height="300" viewBox="0 0 600 300">
-    <g style="transform: translate(20px, 20px)">
-        <!-- transform-box: border-box -->
-        <rect x="-19" y="-19" width="118" height="58" fill="red" />
-        <rect style="transform-box: border-box; transform: rotate(90deg) scale(1, 2) translate(30px, -75%); transform-origin: 50% 0;" width="20" height="20" stroke="green" stroke-width="40" fill="green" />
-      </g>
-      <g style="transform: translate(160px, 10px)">
-        <!-- transform-box: view-box -->
-        <rect x="-9" y="-9" width="118" height="58" fill="red" />
-        <rect style="transform-box: view-box; transform: rotate(90deg) scale(1,2) translate(310px, calc(50% - 35px)); transform-origin: 50% 0;" width="20" height="20" stroke="green" stroke-width="40" fill="green" />
-      </g>
-      <g style="transform: translate(320px, 20px)">
-        <!-- transform-box: stroke-box -->
-        <rect x="-19" y="-19" width="118" height="58" fill="red" />
-        <rect style="transform-box: stroke-box; transform: rotate(90deg) scale(1, 2) translate(30px, -75%); transform-origin: 50% 0;" width="20" height="20" stroke="green" stroke-width="40" fill="green" />
-      </g>
-      <g style="transform: translate(10px, 100px)">
-        <!-- transform-box: content-box -->
-        <rect x="-9" y="-9" width="118" height="58" fill="red" />
-        <rect style="transform-box: content-box; transform: rotate(90deg) scale(1, 2) translate(20px, -87.5%); transform-origin: 50% 0;" width="40" height="40" stroke="green" stroke-width="20" fill="green" />
-      </g>
-      <g style="transform: translate(160px, 100px)">
-        <!-- transform-box: fill-box -->
-        <rect x="-9" y="-9" width="118" height="58" fill="red" />
-        <rect style="transform-box: fill-box; transform: rotate(90deg) scale(1, 2) translate(20px, -87.5%); transform-origin: 50% 0;" width="40" height="40" stroke="green" stroke-width="20" fill="green" />
-      </g>
-  </svg>
+
+    <div class="container">
+        <p>You should see no red boxes below</p>
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 600 400" style=" width: 600px; height: 400px;">
+            <!-- transform-box: view-box -->
+            <rect x="20" y="10" width="100" height="50" fill="red" />
+            <rect x="20" y="5" width="50" height="25" fill="green" style="transform: scale(2, 2); transform-origin: 20px 0; transform-box: view-box;" />
+
+            <rect x="480" y="40" width="50" height="50" fill="red" />
+            <rect x="0" y="0" width="50" height="50" fill="green" style="transform: translate(80%, 10%); transform-box: view-box;" />
+
+            <rect x="120" y="120" width="50" height="50" fill="red" />
+            <rect x="180" y="10" width="50" height="50" fill="green" style="transform: rotate(90deg); transform-origin: 120px 60px; transform-box: view-box;" />
+            <rect x="180" y="10" width="50" height="50" fill="green" style="transform: rotate(90deg); transform-origin: 20% 15%; transform-box: view-box;" />
+
+            <!-- transform-box: fill-box -->
+            <rect x="20" y="200" width="100" height="50" fill="red" />
+            <rect x="20" y="200" width="50" height="25" fill="green" style="transform: scale(2, 2); transform-box: fill-box;" />
+
+            <rect x="480" y="260" width="50" height="50" fill="red" />
+            <rect x="430" y="310" width="50" height="50" fill="green" style="transform: translate(100%, -100%); transform-box: fill-box;" />
+
+            <rect x="120" y="320" width="50" height="50" fill="red" />
+            <rect x="70" y="270" width="50" height="50" fill="green" style="transform: rotate(180deg); transform-origin: 50px 50px; transform-box: fill-box;" />
+            <rect x="95" y="345" width="50" height="50" fill="green" style="transform: rotate(90deg); transform-origin: 100% 50%; transform-box: fill-box;" />
+        </svg>
+    </div>
+
 </body>
 </html>
