@@ -1,34 +1,0 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        div {
-            width: 120px;
-            height: 60px;
-            background-color: green;
-            position: absolute;
-        }
-    </style>
-</head>
-
-<body>
-    <p>You should see no red boxes below</p>
-    <div>
-    </div>
-    <div style="transform: translateX(150px)">
-    </div>
-    <div style="transform: translateX(300px)">
-    </div>
-    <div style="transform: translate(0, 90px)">
-    </div>
-    <div style="transform: translate(150px, 90px)">
-    </div>
-</body>
-
-</html>
