@@ -1297,8 +1297,6 @@ translate3d
 // transform-box
 // border-box
 // view-box
-// stroke-box
-// content-box
 fill-box
 
 // motion path
