@@ -1,3 +1,15 @@
+2019-10-14  Russell Epstein  <russell_e@apple.com>
+
+        Unreviewed, rolling out r251081.
+
+        Broke macOS and iOS builds.
+
+        Reverted changeset:
+
+        "transform-box: content-box, stroke-box missing"
+        https://bugs.webkit.org/show_bug.cgi?id=201892
+        https://trac.webkit.org/changeset/251081
+
 2019-10-14  Dirk Schulze  <krit@webkit.org>
 
         transform-box: content-box, stroke-box missing
